syntax = "proto3";

package mkit.service.comment.v1;

option go_package = "github.com/ygpark2/mboard/service/comment/proto/comment";
option java_multiple_files = true;
option java_package = "mkit.service.comment.v1";

import "google/protobuf/wrappers.proto";
// import "shared/proto/common/common.proto";
import "service/comment/proto/entities/entities.proto";
import "validate/validate.proto";

// Ref:
// https://github.com/seizadi/atlas-template/blob/master/resolved/pkg/pb/cmdb.proto

// comment Service
service commentService {
    rpc Exist (ExistRequest) returns (ExistResponse);
    rpc List (ListRequest) returns (ListResponse);
    rpc Get (GetRequest) returns (GetResponse);
    rpc Create (CreateRequest) returns (CreateResponse);
    rpc Update (UpdateRequest) returns (UpdateResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
}

// FIXME: https://github.com/envoyproxy/protoc-gen-validate/issues/223
// with Workaround in .override.go
message ExistRequest {
    google.protobuf.StringValue id = 1 [(validate.rules).string.uuid = true]; // Not Working
    google.protobuf.StringValue title = 2 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue mobile_title = 3 [(validate.rules).string.min_len = 3];
    google.protobuf.UInt32Value order = 4 [(validate.rules).uint32 = { gte: 1 lte: 100 }];
    google.protobuf.BoolValue search = 5 ;
}

message ExistResponse {
    option (validate.disabled) = true;
    bool result = 1;
}

message ListRequest {
    google.protobuf.Int32Value limit = 1 [(validate.rules).int32 = { gte: 1 lte: 100 }];
    google.protobuf.Int32Value page = 2 [(validate.rules).int32.gte = 1];
    google.protobuf.StringValue sort = 3;
    google.protobuf.StringValue title = 4 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue mobile_title = 5 [(validate.rules).string.min_len = 3];
    google.protobuf.UInt32Value order = 6 [(validate.rules).uint32 = { gte: 1 lte: 100 }];
    google.protobuf.BoolValue search = 7 ;
    string description = 8 [(validate.rules).string.min_len = 0];
    repeated string notices = 9 [(validate.rules).repeated = {min_items: 0, max_items: 5}];
    uint32 total_posts = 10 [(validate.rules).uint32.gte = 0];
    uint64 total_comments = 11 [(validate.rules).uint64.gte = 0];
}

message ListResponse {
    option (validate.disabled) = true;
    repeated mkit.service.comment.entities.v1.Comment results = 1;
    int64 total = 2;
}

message GetRequest {
    google.protobuf.StringValue id = 1 [(validate.rules).string.uuid = true]; // Not Working
    google.protobuf.StringValue title = 2 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue mobile_title = 3 [(validate.rules).string.min_len = 3];
    google.protobuf.UInt32Value order = 4 [(validate.rules).uint32 = { gte: 1 lte: 100 }];
    google.protobuf.BoolValue search = 5 ;
    string description = 6 [(validate.rules).string.min_len = 0];
    repeated string notices = 7 [(validate.rules).repeated = {min_items: 0, max_items: 5}];
    uint32 total_posts = 8 [(validate.rules).uint32.gte = 0];
    uint64 total_comments = 9 [(validate.rules).uint64.gte = 0];
}

message GetResponse {
    option (validate.disabled) = true;
    mkit.service.comment.entities.v1.Comment result = 1;
    // basic.Error error =2;
}

message CreateRequest {
    google.protobuf.StringValue title = 1 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue mobile_title = 2 [(validate.rules).string.min_len = 3];
    google.protobuf.UInt32Value order = 3 [(validate.rules).uint32 = { gte: 1 lte: 100 }];
    google.protobuf.BoolValue search = 4 ;
    string description = 5 [(validate.rules).string.min_len = 0];
    repeated string notices = 6 [(validate.rules).repeated = {min_items: 0, max_items: 5}];
    uint32 total_posts = 7 [(validate.rules).uint32.gte = 0];
    uint64 total_comments = 8 [(validate.rules).uint64.gte = 0];
}

message CreateResponse {
    option (validate.disabled) = true;
    mkit.service.comment.entities.v1.Comment result = 1;
}

message UpdateRequest {
    google.protobuf.StringValue id = 1 [(validate.rules).string.uuid = true]; // Not Working
    google.protobuf.StringValue title = 2 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue mobile_title = 3 [(validate.rules).string.min_len = 3];
    google.protobuf.UInt32Value order = 4 [(validate.rules).uint32 = { gte: 1 lte: 100 }];
    google.protobuf.BoolValue search = 5 ;
    string description = 6 [(validate.rules).string.min_len = 0];
    repeated string notices = 7 [(validate.rules).repeated = {min_items: 0, max_items: 5}];
    uint32 total_posts = 8 [(validate.rules).uint32.gte = 0];
    uint64 total_comments = 9 [(validate.rules).uint64.gte = 0];
}

message UpdateResponse {
    option (validate.disabled) = true;
    mkit.service.comment.entities.v1.Comment result = 1;
}

message DeleteRequest {
    google.protobuf.StringValue id = 1 [(validate.rules).string.uuid = true]; // Not Working
    google.protobuf.StringValue title = 2 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue mobile_title = 3 [(validate.rules).string.min_len = 3];
    google.protobuf.UInt32Value order = 4 [(validate.rules).uint32 = { gte: 1 lte: 100 }];
    google.protobuf.BoolValue search = 5 ;
    string description = 6 [(validate.rules).string.min_len = 0];
    repeated string notices = 7 [(validate.rules).repeated = {min_items: 0, max_items: 5}];
    uint32 total_posts = 8 [(validate.rules).uint32.gte = 0];
    uint64 total_comments = 9 [(validate.rules).uint64.gte = 0];
}

message DeleteResponse {
    option (validate.disabled) = true;
    mkit.service.comment.entities.v1.Comment result = 1;
}
